tests/fixtures/compile_errors/numeric_capacity_mismatch/u16_neg.fe
contract Foo:
    pub def bar() -> u16:
        return u16(-1)